# thisisplural

./: .gitignore  Cargo.toml  README.md
examples/no_std/: .gitignore  Cargo.toml
examples/no_std/src/: main.rs
src/: lib.rs
tests/: lib.rs
thisisplural/: Cargo.toml
thisisplural/src/: lib.rs
thisisplural_derive/: Cargo.toml
thisisplural_derive/src/: lib.rs
