[package]
name = "thisisplural"
version = "0.2.0"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "#[derive(Plural)] for creating frictionless new types with a Vec, HashMap, etc."
homepage = "https://github.com/ryo33/thisisplural"
repository = "https://github.com/ryo33/thisisplural"
readme = "README.md"
keywords = ["derive", "collection", "Vec", "HashMap"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc_macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[dev-dependencies]
pretty_assertions = "0.7"
