[package]
name = "thisisplural"
version = "0.6.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "#[derive(Plural)] for creating frictionless new types with any collection type like Vec or HashMap"
homepage = "https://github.com/ryo33/thisisplural"
repository = "https://github.com/ryo33/thisisplural"
readme = "README.md"
keywords = ["derive", "collection", "Vec", "HashMap", "newtype"]
categories = ["rust-patterns"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.4"
